--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Alexander Burtsev</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="build/styles.css">
 </head>
 <body>
-
+<div class="jumbotron">
+	<header>Alexander Burtsev</header>
+	<p>Frontend-developer &amp; traveler</p>
+</div>
 </body>
 </html>
