--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Alexander Burtsev</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<link rel="stylesheet" href="build/styles.css">
+	<link rel="stylesheet" href="build/build.css">
 </head>
 <body>
-<div class="jumbotron">
-	<header>Alexander Burtsev</header>
-	<p>Frontend-developer &amp; traveler</p>
-</div>
+	<div class="jumbotron">
+		<header class="jumbotron__name">Alexander Burtsev</header>
+		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
+	</div>
+
+	
 </body>
 </html>
