New blocks (tiles and footer) and icon font

--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
 		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
 	</div>
 
-	
+	<div class="tiles clearfix">
+		<a class="tile" href="">
+			<span class="tile__icon flaticon-male66"></span>
+			About me
+		</a>
+		<a class="tile" href="">
+			<span class="tile__icon flaticon-notebook35"></span>
+			Contacts
+		</a>
+		<a class="tile" href="">
+			<span class="tile__icon flaticon-curriculum"></span>
+			Resume
+		</a>
+		<a class="tile" href="">
+			<span class="tile__icon flaticon-portfolio14"></span>
+			Portfolio
+		</a>
+	</div>
+
+	<footer class="footer">
+		<header class="footer__head">Powered by</header>
+		<ul class="footer__list">
+			<li class="footer__link"><a href="http://gruntjs.com/">Grunt</a></li>
+			<li class="footer__link"><a href="http://bower.io/">Bower</a></li>
+			<li class="footer__link"><a href="http://necolas.github.io/normalize.css/">Normilize.css</a></li>
+			<li class="footer__link"><a href="https://github.com/">Common sense</a></li>
+			<li class="footer__link"><a href="http://coffeescript.org/">CoffeeScript</a></li>
+			<li class="footer__link"><a href="http://modernizr.com/">Modernizr</a></li>
+		</ul>
+	</footer>
 </body>
 </html>
