--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Alexander Burtsev</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="build/build.css">
 </head>
 <body>
-	<svg class="implicit">
+	<svg class="is-implicit">
 		<defs>
 			<clipPath id="clip-resume">
 				<path d="M178.483,261.596c26.698,11.924,68.619,14.04,68.619,14.04c0.937,0.021,1.854,0.025,2.774,0.03v0.003
@@ -94,16 +94,16 @@
 	</svg>
 
 
-	<div class="jumbotron">
-		<header class="jumbotron__name">Alexander Burtsev</header>
+	<header class="jumbotron">
+		<h1 class="jumbotron__name">Alexander Burtsev</h1>
 		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
-	</div>
+	</header>
 
 	<div class="tiles clearfix">
 		<a class="tile tile_about" href="">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="-15 -10 94 94">
-				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-about)">
+				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-about)" />
 				</svg>
 			</span>
 			About me
@@ -111,7 +111,7 @@
 		<a class="tile tile_contacts" href="">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="-15 -15 94 94">
-				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-contacts)">
+				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-contacts)" />
 				</svg>
 			</span>
 			Contacts
@@ -119,7 +119,7 @@
 		<a class="tile tile_resume" href="">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="30 30 430 470">
-				  <polygon points="0 0 500 0 500 500 0 500" fill="url(#pattern-resume)">
+				  <polygon points="0 0 500 0 500 500 0 500" fill="url(#pattern-resume)" />
 				</svg>
 			</span>
 			Resume
@@ -127,7 +127,7 @@
 		<a class="tile tile_portfolio" href="">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="-25 -20 178 188">
-				  <polygon points="0 0 128 0 128 128 0 128" fill="url(#pattern-portfolio)">
+				  <polygon points="0 0 128 0 128 128 0 128" fill="url(#pattern-portfolio)" />
 				</svg>
 			</span>
 			Portfolio
@@ -135,12 +135,12 @@
 	</div>
 
 	<footer class="footer">
-		<header class="footer__head">Powered by</header>
+		<h2 class="footer__head">Powered by</h2>
 		<ul class="footer__list">
+			<li class="footer__link"><a href="https://github.com/">Common sense</a></li>
+			<li class="footer__link"><a href="http://necolas.github.io/normalize.css/">Normilize.css</a></li>
 			<li class="footer__link"><a href="http://gruntjs.com/">Grunt</a></li>
 			<li class="footer__link"><a href="http://bower.io/">Bower</a></li>
-			<li class="footer__link"><a href="http://necolas.github.io/normalize.css/">Normilize.css</a></li>
-			<li class="footer__link"><a href="https://github.com/">Common sense</a></li>
 			<li class="footer__link"><a href="http://coffeescript.org/">CoffeeScript</a></li>
 			<li class="footer__link"><a href="http://modernizr.com/">Modernizr</a></li>
 		</ul>
