--- a/about.html
+++ b/about.html
@@ -94,11 +94,11 @@
 	</svg>
 
 	<header class="jumbotron">
-		<h1 class="jumbotron__name">Alexander Burtsev</h1>
+		<h1 class="jumbotron__name"><a href="/">Alexander Burtsev</a></h1>
 		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
 	</header>
 
-	<div class="tiles clearfix">
+	<div class="tiles tiles_atop tiles_atop_about clearfix">
 		<a class="tile tile_about" href="about.html">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="-15 -10 94 94">
@@ -132,6 +132,45 @@
 			Portfolio
 		</a>
 	</div>
+
+	<section class="content">
+		<p>Привет! Как можно было догадаться по заголовку, меня зовут Александр, и я работаю frontend-разработчиком :-)</p>
+	</section>
+
+	<!--div class="tiles clearfix">
+		<a class="tile tile_about" href="">
+			<span class="tile__icon">
+				<svg width="100%" height="100%" viewBox="-15 -10 94 94">
+				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-about)" />
+				</svg>
+			</span>
+			About me
+		</a>
+		<a class="tile tile_contacts" href="">
+			<span class="tile__icon">
+				<svg width="100%" height="100%" viewBox="-15 -15 94 94">
+				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-contacts)" />
+				</svg>
+			</span>
+			Contacts
+		</a>
+		<a class="tile tile_resume" href="">
+			<span class="tile__icon">
+				<svg width="100%" height="100%" viewBox="30 30 430 470">
+				  <polygon points="0 0 500 0 500 500 0 500" fill="url(#pattern-resume)" />
+				</svg>
+			</span>
+			Resume
+		</a>
+		<a class="tile tile_portfolio" href="">
+			<span class="tile__icon">
+				<svg width="100%" height="100%" viewBox="-25 -20 178 188">
+				  <polygon points="0 0 128 0 128 128 0 128" fill="url(#pattern-portfolio)" />
+				</svg>
+			</span>
+			Portfolio
+		</a>
+	</div-->
 
 	<footer class="footer">
 		<h2 class="footer__head">Powered by</h2>
