--- a/about.html
+++ b/about.html
@@ -133,44 +133,30 @@
 		</a>
 	</div>
 
-	<section class="content">
-		<p>Привет! Как можно было догадаться по заголовку, меня зовут Александр, и я работаю frontend-разработчиком :-)</p>
-	</section>
+	<section class="content content_about">
+		<p>Давайте знакомиться.</p>
+		<p>Меня зовут Александр Бурцев, и я работаю frontend-разработчиком.</p>
 
-	<!--div class="tiles clearfix">
-		<a class="tile tile_about" href="">
-			<span class="tile__icon">
-				<svg width="100%" height="100%" viewBox="-15 -10 94 94">
-				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-about)" />
-				</svg>
-			</span>
-			About me
-		</a>
-		<a class="tile tile_contacts" href="">
-			<span class="tile__icon">
-				<svg width="100%" height="100%" viewBox="-15 -15 94 94">
-				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-contacts)" />
-				</svg>
-			</span>
-			Contacts
-		</a>
-		<a class="tile tile_resume" href="">
-			<span class="tile__icon">
-				<svg width="100%" height="100%" viewBox="30 30 430 470">
-				  <polygon points="0 0 500 0 500 500 0 500" fill="url(#pattern-resume)" />
-				</svg>
-			</span>
-			Resume
-		</a>
-		<a class="tile tile_portfolio" href="">
-			<span class="tile__icon">
-				<svg width="100%" height="100%" viewBox="-25 -20 178 188">
-				  <polygon points="0 0 128 0 128 128 0 128" fill="url(#pattern-portfolio)" />
-				</svg>
-			</span>
-			Portfolio
-		</a>
-	</div-->
+		<h2>My work</h2>
+
+		<p>В 2005-м году я устроился на работу HTML-верстальщиком. За пару лет, как это бывает 
+		с верстальщиками, я освоил JavaScript и полностью ушел в программирование. Постепенно дело дошло и до знакомства
+		с полным набором backend-технологий: серверные языки программирования (PHP, Python), базы данных 
+		(MySQL, PostreSQL), конфигурирование серверов и многое другое. Подробнее о моем опыте работы можно прочесть
+		в <a href="">резюме</a>.</p>
+
+		<h2>My hobbies</h2>
+
+		<p>Web-разработка для меня не только <a href="">постоянная работа</a>, не только 
+		<a href="">периодические фрилансы</a>, но и хобби. Я много и с удовольствием читаю профильные блоги, развиваю  
+		собственные проекты, и участвую, по мере сил, в развитии сторонних библиотек.</p>
+
+		<p>Кроме программирования мне нравится путешествовать. На автомобиле, пешком, самолетом, поездом, по России,
+		за границей, в палатке, в отеле — не важно. Главное — получить удовольствие от всех этапов путешествия, начиная
+		с планирования поездки и заканчивая возвращением в промокшей обуви и с порванным рюкзаком :-)</p>
+
+		<p>В свободное от всего вышеперечисенного время я <a href="http://bibla.ru/albburtsev/">читаю книги</a>, <a href="myshows.ru/albburtsev">смотрю сериалы</a>, улучшаю свой английский, а также являюсь мужем и отцом.</p>
+	</section>
 
 	<footer class="footer">
 		<h2 class="footer__head">Powered by</h2>
