--- a/contacts.html
+++ b/contacts.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Alexander Burtsev: couple words about me</title>
+	<title>Alexander Burtsev: how to contact with me</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<!--link rel="stylesheet" type="text/css" href="static/fonts/flaticon.css"-->
 	<link rel="stylesheet" href="build/build.css">
 </head>
 <body>
@@ -98,7 +99,7 @@
 		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
 	</header>
 
-	<div class="tiles tiles_atop tiles_atop_about clearfix">
+	<div class="tiles tiles_atop tiles_atop_contacts clearfix">
 		<a class="tile tile_about" href="about.html">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="-15 -10 94 94">
@@ -133,29 +134,72 @@
 		</a>
 	</div>
 
-	<section class="content content_about">
-		<p>Давайте знакомиться.</p>
-		<p>Меня зовут Александр Бурцев, и я работаю frontend-разработчиком.</p>
+	<section class="content content_contacts">
+		<p>Самый надежный способ связаться со мной — написать по <a href="mailto:albburtsev@gmail.com">электронной почте</a> 
+		или добавиться в <a href="skype:albburtsev">скайп</a>.</p>
+		<ul class="contacts">
+			<li class="contact">
+				<a href="tel:+79160064854">
+					<span class="contact__icon flaticon-phone72"></span>+7 (916) 006-48-54
+				</a>
+			</li>
+			<li class="contact">
+				<a href="mailto:albburtsev@gmail.com">
+					<span class="contact__icon flaticon-email6"></span>albburtsev@gmail.com
+				</a>
+			</li>
+			<li class="contact">
+				<a href="skype:albburtsev">
+					<span class="contact__icon flaticon-social6"></span>albburtsev
+				</a>
+			</li>
 
-		<h2>My work</h2>
+			<li class="contact_delim"></li>
 
-		<p>В 2005-м году я устроился на работу HTML-верстальщиком. За пару лет, как это бывает 
-		с верстальщиками, я освоил JavaScript и полностью ушел в программирование. Постепенно дело дошло и до знакомства
-		с полным набором  серверных технологий: языки программирования (PHP, Python), базы данных 
-		(MySQL, PostreSQL), конфигурирование серверов и многое другое. Подробнее о моем опыте работы можно прочесть
-		в <a href="">резюме</a>.</p>
+			<li class="contact">
+				<a href="https://github.com/albburtsev">
+					<span class="contact__icon flaticon-github13"></span>Github
+				</a>
+			</li>
+			<li class="contact">
+				<a href="http://habrahabr.ru/users/bur/">
+					<span class="contact__icon flaticon-hotel75"></span>Habrahabr
+				</a>
+			</li>
 
-		<h2>My hobbies</h2>
+			<li class="contact_delim"></li>
 
-		<p>Web-разработка для меня не только <a href="">постоянная работа</a>, не только 
-		<a href="">периодические фрилансы</a>, но и хобби. Я много и с удовольствием читаю профильные блоги, развиваю  
-		собственные проекты, и участвую, по мере сил, в развитии сторонних библиотек.</p>
-
-		<p>Кроме программирования мне нравится путешествовать. На автомобиле, пешком, самолетом, поездом, по России,
-		за границей, в палатке, в отеле — не важно. Главное — получить удовольствие от всех этапов путешествия, начиная
-		с планирования поездки и заканчивая возвращением в промокшей обуви и с порванным рюкзаком :-)</p>
-
-		<p>В свободное от всего вышеперечисенного время я <a href="http://bibla.ru/albburtsev/">читаю книги</a>, <a href="http://myshows.ru/albburtsev">смотрю сериалы</a>, улучшаю свой английский, а также являюсь мужем и отцом.</p>
+			<li class="contact">
+				<a href="https://www.facebook.com/albburtsev">
+					<span class="contact__icon flaticon-facebook29"></span>Facebook
+				</a>
+			</li>
+			<li class="contact">
+				<a href="https://twitter.com/albburtsev">
+					<span class="contact__icon flaticon-social19"></span>Twitter
+				</a>
+			</li>
+			<li class="contact">
+				<a href="https://foursquare.com/user/46356854">
+					<span class="contact__icon flaticon-check59"></span>Foursquare
+				</a>
+			</li>
+			<li class="contact">
+				<a href="http://instagram.com/albburtsev/">
+					<span class="contact__icon flaticon-photos12"></span>Instagram
+				</a>
+			</li>
+			<li class="contact">
+				<a href="https://plus.google.com/u/0/112730589178585282928/posts">
+					<span class="contact__icon flaticon-social5"></span>Google+
+				</a>
+			</li>
+			<li class="contact">
+				<a href="http://www.youtube.com/user/albburtsev">
+					<span class="contact__icon flaticon-youtube17"></span>Youtube+
+				</a>
+			</li>
+		</ul>
 	</section>
 
 	<footer class="footer">
