--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Alexander Burtsev</title>
+	<title>Alexander Burtsev: frontend-developer & traveler</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="build/build.css">
 </head>
@@ -107,7 +107,7 @@
 			</span>
 			About me
 		</a>
-		<a class="tile tile_contacts" href="">
+		<a class="tile tile_contacts" href="contacts.html">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="-15 -15 94 94">
 				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-contacts)" />
