--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Alexander Burtsev: frontend-developer & traveler</title>
+	<title>Alexander Burtsev: my expirience &amp; skills</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="build/build.css">
 </head>
@@ -94,11 +94,11 @@
 	</svg>
 
 	<header class="jumbotron">
-		<h1 class="jumbotron__name">Alexander Burtsev</h1>
+		<h1 class="jumbotron__name"><a href="/">Alexander Burtsev</a></h1>
 		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
 	</header>
 
-	<div class="tiles clearfix">
+	<div class="tiles tiles_atop tiles_atop_resume clearfix">
 		<a class="tile tile_about" href="about.html">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="-15 -10 94 94">
@@ -107,7 +107,7 @@
 			</span>
 			About me
 		</a>
-		<a class="tile tile_contacts" href="contacts.html">
+		<a class="tile tile_contacts" href="">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="-15 -15 94 94">
 				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-contacts)" />
@@ -115,7 +115,7 @@
 			</span>
 			Contacts
 		</a>
-		<a class="tile tile_resume" href="resume.html">
+		<a class="tile tile_resume" href="">
 			<span class="tile__icon">
 				<svg width="100%" height="100%" viewBox="30 30 430 470">
 				  <polygon points="0 0 500 0 500 500 0 500" fill="url(#pattern-resume)" />
@@ -132,6 +132,85 @@
 			Portfolio
 		</a>
 	</div>
+
+	<section class="content content_resume">
+		<h2>Skills</h2>
+
+		<p>Мне нравится находить применение современнным технологиям в своих проектах, не забывая о поддержке старых браузеров. Всю рутину в своей повседневной работе я стараюсь автоматизировать. Большую часть своего десятилетнего опыта я работал над frontend-частью проектов, хотя имею опыт backend-разработки.</p>
+
+		<h3>Frontend</h3>
+
+		<ul>
+			<li><strong>JavaScript</strong>: Vanilla JS (ES3/5), CoffeeScript, jQuery, Backbone.js/Marionette.js, Require.js (AMD)</li>
+			<li><strong>HTML</strong>: HTML4/5, BEM, Twitter Bootstrap, SVG</li>
+			<li><strong>CSS</strong>: CSS2/3, Stylus</li>
+		</ul>
+
+		<h3>Backend</h3>
+		<p>Python (Django, Tornado), PHP (Twig), Node.js (Express), Bash.</p>
+
+		<h3>Administration and databases</h3>
+
+		<ul>
+			<li><strong>OS</strong>: CentOS, MacOS</li>
+			<li><strong>SQL</strong>: MySQL, PostreSQL</li>
+			<li><strong>Сервера</strong>: Nginx, Apache</li>
+		</ul>
+
+		<h3>Misc</h3>
+
+		<ul>
+			<li><strong>Документация</strong>: JSDoc, DocStrap</li>
+			<li><strong>Тестирование</strong>: qUnit, Mocha, CasperJS (PhantomCSS)</li>
+			<li><strong>Автоматизация разработки</strong>: Grunt, Gulp, Bower, Yeoman, Emmet</li>
+			<li><strong>Геоинформационные технологии</strong>: PostGIS, Leaflet.js</li>
+			<li><strong>IDE</strong>: SublimeText, WebStorm, Aptana</li>
+			<li><strong>GIT</strong></li>
+		</ul>
+
+		<h2>Experience</h2>
+
+		<h3><a href="http://mail.ru/">Mail.Ru</a>: 2011 — 2014 гг.</h3>
+
+		<p>Руководитель группы разработки проекта [Карты@Mail.Ru](http://maps.mail.ru/).</p>
+
+		<ul>
+			<li>Создание и поддержка JavaScript API Карт@Mail.Ru. Используется на портальных проектах Mail.Ru (сами Карты@Mail.Ru, Новости@Mail.Ru, Афиша@Mail.Ru и т.д.).  Первые две версии JS API разрабатывались «с нуля». В основу третьей (и последней) версии легла библиотека <a href="http://leafletjs.com">Leaflet</a>.</li>
+			<li>Веб-интерфейс всех разделов проекта Карты@Mail.ru (frontend+backend).</li>
+			<li>Карты метро, включая построение маршрутов (frontend+backend).</li>
+			<li>Подготовка к растеризации пробочных данных (backend).</li>
+			<li>Django-приложения для закрытых разделов проекта: документация, инструменты разработчиков и админка (backend).</li>
+			<li>Участие в обсуждении, проектировании и разработке большинства сервисов проекта Карты@Mail.Ru.</li>
+		</ul>
+
+		<h3><a href="http://mail.ru/">Mail.Ru</a>: 2006 — 2011 гг.</h3>
+
+		<p>JavaScript-разработчик контентных проектов Mail.Ru.</p>
+
+		<ul>
+			<li>UI-элементы портальных проектов: слайдеры, трекбары, выпадушки и многое другое.</li>
+			<li>WYSIWIG-редакторы для почты и контентных проектов.</li>
+			<li>AJAX-почта pro.mail.ru.</li>
+			<li>Рутинные задачи: валидаторы форм, аяксификаторы.</li>
+		</ul>
+
+		<h3><a href="http://mail.ru/">Mail.Ru</a>: 2005 — 2006 гг.</h3>
+
+		<p>HTML-верстальщик контентных проектов и почты.</p>
+
+		<h2>My projects</h2>
+
+		<p>jQuery-плагины:</p>
+
+		<ul>
+			<li><a href="https://github.com/albburtsev/jquery.lookingfor">jquery.lookingfor</a> – клиентский поиск;</li>
+			<li><a href="https://github.com/albburtsev/jquery.typist">jquery.typist</a> – имитация печати текста.</li>
+		</ul>
+
+		<p>Разработал собственную CMS на PHP – <a href="http://cms-correct.ru/">Correct</a>. Проект создавался для быстрого развертывания простых сайтов типа «каталог» с удобной админкой.</p>
+
+		<p>Также я работаю в составе группы frontend-разработчиков проекта <a href="http://rememba.ru/">rememba.ru</a>.</p>
+	</section>
 
 	<footer class="footer">
 		<h2 class="footer__head">Powered by</h2>
