Translation of the page 'about me'

--- a/about.html
+++ b/about.html
@@ -134,28 +134,20 @@
 	</div>
 
 	<section class="content content_about">
-		<p>Давайте знакомиться.</p>
-		<p>Меня зовут Александр Бурцев, и я работаю frontend-разработчиком.</p>
+		<p>Greetings!</p>
+		<p>My name is Alexander Burtsev and I'm frontend-developer.</p>
 
 		<h2>My work</h2>
 
-		<p>В 2005-м году я устроился на работу HTML-верстальщиком. За пару лет, как это бывает 
-		с верстальщиками, я освоил JavaScript и полностью ушел в программирование. Постепенно дело дошло и до знакомства
-		с полным набором  серверных технологий: языки программирования (PHP, Python), базы данных 
-		(MySQL, PostreSQL), конфигурирование серверов и многое другое. Подробнее о моем опыте работы можно прочесть
-		в <a href="">резюме</a>.</p>
+		<p>In 2005 I began to work as a HTML-coder. In two years, as it usually happens with HTML-coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="">my cv</a>.</p>
 
 		<h2>My hobbies</h2>
 
-		<p>Web-разработка для меня не только <a href="">постоянная работа</a>, не только 
-		<a href="">периодические фрилансы</a>, но и хобби. Я много и с удовольствием читаю профильные блоги, развиваю  
-		собственные проекты, и участвую, по мере сил, в развитии сторонних библиотек.</p>
+		<p>Web-development is not only <a href="">a job</a> for me, it’s my hobby as well. I regularly read a lot of thematic blogs, develop my own projects, and take part, as much as I can, in contributing of existing open source projects.</p>
 
-		<p>Кроме программирования мне нравится путешествовать. На автомобиле, пешком, самолетом, поездом, по России,
-		за границей, в палатке, в отеле — не важно. Главное — получить удовольствие от всех этапов путешествия, начиная
-		с планирования поездки и заканчивая возвращением в промокшей обуви и с порванным рюкзаком :-)</p>
+		<p>Besides I like to travel. By car, on foot, by plane or by train, across Russia and abroad, in a tent or in a hotel — it doesn't matter. The main thing is to get pleasure from all stages: from planning the trip to returning home in wet boots and with a torn backpack :-)</p>
 
-		<p>В свободное от всего вышеперечисенного время я <a href="http://bibla.ru/albburtsev/">читаю книги</a>, <a href="http://myshows.ru/albburtsev">смотрю сериалы</a>, улучшаю свой английский, а также являюсь мужем и отцом.</p>
+		<p>In my spare time I <a href="http://bibla.ru/albburtsev/">read books</a>, <a href="http://myshows.ru/albburtsev">watch TV shows</a> and improve my English. Also I'm a husband and a father.</p>
 	</section>
 
 	<footer class="footer">
