New color of links

--- a/contacts.html
+++ b/contacts.html
@@ -134,8 +134,8 @@
 	</div>
 
 	<section class="content content_contacts">
-		<p>Самый надежный способ связаться со мной — написать по <a href="mailto:albburtsev@gmail.com">электронной почте</a> 
-		или добавиться в <a href="skype:albburtsev">скайп</a>.</p>
+		<p>Most reliable way to contact with me is <a href="mailto:albburtsev@gmail.com">to write email</a> or add me in <a href="skype:albburtsev">skype</a>.</p>
+
 		<ul class="contacts">
 			<li class="contact">
 				<a href="tel:+79160064854">
