Chapter about education

--- a/about.html
+++ b/about.html
@@ -141,6 +141,10 @@
 
 		<p>In 2005 I began to work as a HTML-coder. In two years, as it usually happens with HTML-coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="">my cv</a>.</p>
 
+		<h2>Education</h2>
+
+		<p>Graduate of Moscow State University (Chemical department, 2001 — 2007). Yes, it's little strange, that <a href="http://istina.msu.ru/workers/1580266/">chemist</a> work as frontend-developer. But why not?</p>
+
 		<h2>My hobbies</h2>
 
 		<p>Web-development is not only <a href="">a job</a> for me, it’s my hobby as well. I regularly read a lot of thematic blogs, develop my own projects, and take part, as much as I can, in contributing of existing open source projects.</p>
