--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,129 +9,242 @@
 	<link rel="stylesheet" href="build/build.css">
 </head>
 <body>
-	<svg class="is-implicit">
-		<defs>
-			<clipPath id="clip-resume">
-				<path d="M178.483,261.596c26.698,11.924,68.619,14.04,68.619,14.04c0.937,0.021,1.854,0.025,2.774,0.03v0.003
-					c0.041,0,0.082-0.001,0.123-0.001s0.084,0.001,0.125,0.001v-0.003c0.92-0.005,1.842-0.012,2.774-0.03
-					c0,0,41.92-2.116,68.617-14.041c0,0,3.815-0.896,3.938-9.646c0,0-1.373-38.339-12.982-55.576c0,0-2.909-4.467-11.15-7.54
-					c0,0-26.882-8.191-28.693-15.15c0,0-8.905,23.057-22.627,22.798c-13.721,0.259-22.628-22.797-22.628-22.797
-					c-1.812,6.959-28.692,15.15-28.692,15.15c-8.181,2.947-11.152,7.54-11.152,7.54c-11.609,17.236-12.982,55.575-12.982,55.575
-					C174.669,260.699,178.483,261.596,178.483,261.596z"/>
-				<path d="M220.395,146.323c1.975,16.585,16.229,33.761,29.152,33.761c14.865,0,28.969-18.091,31.187-33.76
-					c0.813-0.58,2.22-2.025,2.688-5.291c0,0,3.154-11.335-1.06-10.124c1.507-4.355,6.351-21.408-3.032-31.99
-					c0,0-4.375-6.044-15.119-9.249c-0.428-0.295-0.771-0.61-1.221-0.926c0,0,0.243,0.295,0.527,0.753
-					c-0.568-0.143-1.2-0.285-1.832-0.438c-0.59-0.641-1.28-1.272-1.993-1.933c0,0,0.673,0.661,1.425,1.811
-					c-0.324-0.082-0.55-0.193-0.834-0.214c-0.471-0.763-1.078-1.496-1.854-2.249c0,0,0.326,0.57,0.773,1.485
-					c-2.035-1.445-5.976-4.792-5.976-8.526c0,0-2.515,1.15-3.918,3.256c-0.603-0.939-0.082-2.045-0.082-2.045
-					c-1.14,0.641-4.104,3.032-5.041,6.278l-0.85-1.15c-1.729-1.984-4.772-0.458-4.772-0.458s-15.688,6.787-20.236,20.859
-					c0,0-2.625,6.329,0.875,24.959c-4.996-2.351-1.588,9.9-1.588,9.9C218.146,144.319,219.5,145.764,220.395,146.323z"/>
-				<rect x="136.296" y="414.422" width="184.038" height="18.314"/>
-				<rect x="136.268" y="307.158" width="238.194" height="18.231"/>
-				<rect x="136.268" y="343.809" width="220.165" height="18.334"/>
-				<rect x="136.268" y="379.42" width="202.096" height="18.213"/>
-			</clipPath>
-
-			<clipPath id="clip-about">
-				<path d="M39.917,46.818c-0.685-0.979-1.186-2.583-0.129-8.835c1.808-1.791,3.303-3.45,3.649-3.838l0.094-0.105l0.302-1.653
-					c2.587-5.57,10.593-25.854-8.514-28.761C13.704,0.336,13.903,25.979,21.735,33.673l0.067,0.367l0.094,0.105
-					c0.346,0.388,1.842,2.048,3.651,3.839c0.898,5.319,0.669,7.276,0.142,8.36C17.515,48.001,4.111,52.037,2,61.3h30h30
-					C58.566,52.821,47.603,48.723,39.917,46.818z M25.983,37.006c-0.167-0.166-0.332-0.333-0.496-0.5
-					c-1.002-1.017-1.956-2.034-2.751-2.923l-0.998-5.462c-0.053-0.315-0.098-0.62-0.146-0.928c0.037-5.214,0.761-11.619,4.091-11.693
-					l7.543,5.75v-1.875l4.219,1.875l-0.767-3.5l1.79,0.625l0.639-2L37.573,12.5l6.771,7.11c0.042,2.475-0.206,5.312-0.747,8.505
-					l-0.999,5.468c-0.795,0.888-1.749,1.906-2.751,2.923c-0.164,0.167-0.329,0.334-0.496,0.5c-0.168,0.168-0.338,0.334-0.507,0.5
-					c-2.515,2.464-5.111,4.666-6.177,4.666s-3.662-2.202-6.177-4.666C26.32,37.34,26.151,37.174,25.983,37.006z M32.667,56.384
-					c-4.985,0-9.042-2.299-9.042-5.125c0-0.915,0.454-1.823,1.313-2.627l0.114-0.107c0.211-0.186,0.444-0.366,0.695-0.536l0.15-0.151
-					c0.359-0.452,0.723-0.91,0.965-1.723c0.355-1.191,0.444-3.156-0.121-6.973c2.219,2.09,4.628,4.032,5.924,4.032
-					c1.296,0,3.705-1.942,5.924-4.032c-0.63,4.25-0.445,6.203,0.021,7.367c0.238,0.595,0.549,0.986,0.861,1.378l0.111,0.104
-					c0.26,0.176,0.499,0.36,0.71,0.55l0.101,0.094c0.858,0.803,1.312,1.712,1.312,2.627C41.708,54.085,37.652,56.384,32.667,56.384z"/>
-			</clipPath>
-
-			<clipPath id="clip-contacts">
-				<path d="M56.117,8.383c0-1.013-0.826-1.838-1.839-1.838h-3.757c-0.069,0-0.141,0.006-0.212,0.016V2.974H7.93v49.104
-					c-0.047,0.455-0.396,4.543,1.869,7.07c1.116,1.246,2.658,1.879,4.581,1.879h34.091c1.013,0,1.839-0.826,1.839-1.839v-4.057
-					l-36.104-0.028v1.627h34.478v2.458c0,0.119-0.094,0.212-0.212,0.212H14.379c-1.439,0-2.574-0.448-3.368-1.333
-					c-1.561-1.739-1.527-4.727-1.474-5.634H50.31v-4.568c0.071,0.01,0.143,0.016,0.212,0.016h3.757c1.013,0,1.839-0.825,1.839-1.838
-					V35.183c0-0.474-0.184-0.922-0.505-1.262c0.321-0.337,0.505-0.788,0.505-1.259V21.803c0-0.483-0.19-0.941-0.523-1.281
-					c0.333-0.339,0.523-0.798,0.523-1.284V8.383z M35.396,34.229c-1.35,0-2.596-0.907-2.493-2.963H32.77
-					c-1.181,1.988-2.729,2.963-4.749,2.963c-1.954,0-3.636-1.583-3.636-4.241c0-4.175,3.3-7.98,7.98-7.98
-					c1.449,0,2.729,0.302,3.605,0.708l-1.146,6.091c-0.505,2.562-0.1,3.739,1.01,3.773c1.72,0.034,3.636-2.256,3.636-6.163
-					c0-4.883-2.929-8.385-8.148-8.385c-5.487,0-10.102,4.347-10.102,11.18c0,5.624,3.671,9.092,8.653,9.092
-					c1.919,0,3.705-0.404,5.085-1.178l0.539,1.449c-1.851,0.976-3.736,1.346-5.992,1.346c-5.524,0-10.205-4.041-10.205-10.506
-					c0-6.936,4.814-12.931,12.29-12.931c5.861,0,9.8,4.11,9.8,9.734C41.389,31.266,38.563,34.229,35.396,34.229z M54.49,46.042
-					c0,0.115-0.093,0.212-0.212,0.212h-3.757c-0.119,0-0.212-0.097-0.212-0.212V35.183c0-0.118,0.093-0.212,0.212-0.212h3.757
-					c0.119,0,0.212,0.094,0.212,0.212V46.042z M54.49,32.662c0,0.115-0.093,0.212-0.212,0.212h-3.757
-					c-0.119,0-0.212-0.097-0.212-0.212V21.803c0-0.119,0.093-0.212,0.212-0.212h3.757c0.119,0,0.212,0.093,0.212,0.212V32.662z
-					 M54.49,19.239c0,0.118-0.093,0.215-0.212,0.215h-3.757c-0.119,0-0.212-0.097-0.212-0.215V8.383c0-0.118,0.093-0.212,0.212-0.212
-					h3.757c0.119,0,0.212,0.094,0.212,0.212V19.239z"/>
-			</clipPath>
-
-			<clipPath id="clip-portfolio">
-				<path d="M97.345,30.856v-9.569c0-5.862-4.769-10.632-10.632-10.632H43.122c-5.863,0-10.632,4.77-10.632,10.632v9.569h8.506v-9.569
-					c0-1.172,0.954-2.126,2.126-2.126h43.591c1.173,0,2.126,0.954,2.126,2.126v9.569H97.345z"/>
-				<path d="M1.125,126.013h125.458V38.83H1.125V126.013z M10.694,48.399h106.321v68.045H10.694V48.399z"/>
-				<rect x="28.237" y="62.752" width="70.172" height="5.316"/>
-				<rect x="28.237" y="80.295" width="70.172" height="5.316"/>
-				<rect x="28.237" y="97.838" width="70.172" height="5.316"/>
-			</clipPath>
-
-			<pattern id="pattern-resume" patternUnits="userSpaceOnUse" width="200" height="200" viewbox="0 0 200 200">
-				<image xlink:href="static/i/resume.png" width="200" height="200" />
-			</pattern>
-
-			<pattern id="pattern-about" patternUnits="userSpaceOnUse" width="200" height="200" viewbox="0 0 200 200">
-				<image xlink:href="static/i/about.png" width="200" height="200" />
-			</pattern>
-
-			<pattern id="pattern-contacts" patternUnits="userSpaceOnUse" width="200" height="200" viewbox="0 0 200 200">
-				<image xlink:href="static/i/contacts.png" width="200" height="200" />
-			</pattern>
-
-			<pattern id="pattern-portfolio" patternUnits="userSpaceOnUse" width="200" height="200" viewbox="0 0 200 200">
-				<image xlink:href="static/i/portfolio.png" width="200" height="200" />
-			</pattern>
-		</defs>
-	</svg>
-
 	<header class="jumbotron">
 		<h1 class="jumbotron__name">Alexander Burtsev</h1>
 		<p class="jumbotron__desc">Frontend-developer &amp; traveler</p>
 	</header>
 
-	<div class="tiles clearfix">
-		<a class="tile tile_about" href="about.html">
-			<span class="tile__icon">
-				<svg width="100%" height="100%" viewBox="-15 -10 94 94">
-				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-about)" />
-				</svg>
-			</span>
-			About me
-		</a>
-		<a class="tile tile_contacts" href="contacts.html">
-			<span class="tile__icon">
-				<svg width="100%" height="100%" viewBox="-15 -15 94 94">
-				  <polygon points="0 0 64 0 64 64 0 64" fill="url(#pattern-contacts)" />
-				</svg>
-			</span>
-			Contacts
-		</a>
-		<a class="tile tile_resume" href="resume.html">
-			<span class="tile__icon">
-				<svg width="100%" height="100%" viewBox="30 30 430 470">
-				  <polygon points="0 0 500 0 500 500 0 500" fill="url(#pattern-resume)" />
-				</svg>
-			</span>
-			Resume
-		</a>
-		<a class="tile tile_portfolio" href="portfolio.html">
-			<span class="tile__icon">
-				<svg width="100%" height="100%" viewBox="-25 -20 178 188">
-				  <polygon points="0 0 128 0 128 128 0 128" fill="url(#pattern-portfolio)" />
-				</svg>
-			</span>
-			Portfolio
-		</a>
-	</div>
+	<section class="slide slide_about">
+		<div class="title title_about">
+			<h1 class="title__head">About me</h1>
+			<div class="title__delimeter">
+				<div class="title__gurt">
+					<span class="title__icon flaticon-man143"></span>
+				</div>
+			</div>
+		</div>
+		<div class="slide__text">
+			<h2>My work</h2>
+
+			<p>In 2005 I began to work as a HTML-coder. In two years, as it usually happens with HTML-coders, I learned JavaScript and  devoted myself entirely to programming. Gradually I also learned a complete set of server technologies: programming languages (PHP, Python), databases (MySQL, PostreSQL), configuring servers and so on. You can get more information about my experience in <a href="">my&nbsp;cv</a>.</p>
+
+			<h2>My hobbies</h2>
+
+			<p>Web-development is not only <a href="">a job</a> for me, it’s my hobby as well. I regularly read a lot of thematic blogs, develop my own projects, and take part, as much as I can, in contributing of existing open source projects.</p>
+
+			<p>Besides I like to travel. By car, on foot, by plane or by train, across Russia and abroad, in a tent or in a hotel — it doesn't matter. The main thing is to get pleasure from all stages: from planning the trip to returning home in wet boots and with a torn backpack :-)</p>
+
+			<p>In my spare time I <a href="http://bibla.ru/albburtsev/">read books</a>, <a href="http://myshows.ru/albburtsev">watch TV shows</a> and improve my English. Also I'm a husband and a father.</p>
+
+			<h2>Education</h2>
+
+			<p>Graduate of Moscow State University (Chemical department, 2001 — 2007). Yes, it's little strange, that <a href="http://istina.msu.ru/workers/1580266/">chemist</a> work as frontend-developer. But why not?</p>
+		</div>
+	</section>
+
+	<section class="slide">
+		<div class="title title_portfolio">
+			<h1 class="title__head">Portfolio</h1>
+			<div class="title__delimeter">
+				<div class="title__gurt">
+					<span class="title__icon flaticon-portfolio14"></span>
+				</div>
+			</div>
+		</div>
+		<div class="projects clearfix">
+			<a class="project" href="http://rememba.ru/">
+				<img class="project__image" src="static/i/screenshots/rememba1.min.png" alt="">
+				<span class="project__title">Rememba</span>
+				<span class="project__shutter dark">
+					<span class="project__shutter__caption">Application for expanding vocabulary</span>
+					My contribution: frontend code of application (Backbone/Marionette) and tests (CasperJS/PhantonCSS).
+				</span>
+			</a>
+			<a class="project" href="http://edox.ru/">
+				<img class="project__image" src="static/i/screenshots/edox2.min.png" alt="">
+				<span class="project__title">Edox Russia</span>
+				<span class="project__shutter dark">
+					<span class="project__shutter__caption">Edox watches in Russia</span>
+					My contribution: frontend (HTML/CSS, jQuery) and backend (CMS Correct).
+				</span>
+			</a>
+			<a class="project" href="http://www.gcwatches.ru/">
+				<img class="project__image" src="static/i/screenshots/gc1.min.png" alt="">
+				<span class="project__title">GC Watches</span>
+				<span class="project__shutter dark">
+					<span class="project__shutter__caption">GC Watches in Russia</span>
+					My contribution: frontend (HTML/CSS, jQuery) and backend (CMS Correct).
+				</span>
+			</a>
+		</div>
+	</section>
+
+	<section class="slide">
+		<div class="title title_resume">
+			<h1 class="title__head">Resume</h1>
+			<div class="title__delimeter">
+				<div class="title__gurt">
+					<span class="title__icon flaticon-curriculum"></span>
+				</div>
+			</div>
+		</div>
+		<div class="slide__text">
+			<h2>Skills</h2>
+
+			<p>Мне нравится находить применение современнным технологиям в своих проектах, не забывая о поддержке старых браузеров. Всю рутину в своей повседневной работе я стараюсь автоматизировать. Большую часть своего десятилетнего опыта я работал над frontend-частью проектов, хотя имею опыт backend-разработки.</p>
+
+			<h3>Frontend</h3>
+
+			<ul>
+				<li><strong>JavaScript</strong>: Vanilla JS (ES3/5), CoffeeScript, jQuery, Backbone.js/Marionette.js, Require.js (AMD)</li>
+				<li><strong>HTML</strong>: HTML4/5, BEM, Twitter Bootstrap, SVG</li>
+				<li><strong>CSS</strong>: CSS2/3, Stylus</li>
+			</ul>
+
+			<h3>Backend</h3>
+			<p>Python (Django, Tornado), PHP (Twig), Node.js (Express), Bash.</p>
+
+			<h3>Administration and databases</h3>
+
+			<ul>
+				<li><strong>OS</strong>: CentOS, MacOS</li>
+				<li><strong>SQL</strong>: MySQL, PostreSQL</li>
+				<li><strong>Сервера</strong>: Nginx, Apache</li>
+			</ul>
+
+			<h3>Misc</h3>
+
+			<ul>
+				<li><strong>Документация</strong>: JSDoc, DocStrap</li>
+				<li><strong>Тестирование</strong>: qUnit, Mocha, CasperJS (PhantomCSS)</li>
+				<li><strong>Автоматизация разработки</strong>: Grunt, Gulp, Bower, Yeoman, Emmet</li>
+				<li><strong>Геоинформационные технологии</strong>: PostGIS, Leaflet.js</li>
+				<li><strong>IDE</strong>: SublimeText, WebStorm, Aptana</li>
+				<li><strong>GIT</strong></li>
+			</ul>
+
+			<h2>Experience</h2>
+
+			<h3><a href="http://mail.ru/">Mail.Ru</a>: 2011 — 2014</h3>
+
+			<p>Руководитель группы разработки проекта [Карты@Mail.Ru](http://maps.mail.ru/).</p>
+
+			<ul>
+				<li>Создание и поддержка JavaScript API Карт@Mail.Ru. Используется на портальных проектах Mail.Ru (сами Карты@Mail.Ru, Новости@Mail.Ru, Афиша@Mail.Ru и т.д.).  Первые две версии JS API разрабатывались «с нуля». В основу третьей (и последней) версии легла библиотека <a href="http://leafletjs.com">Leaflet</a>.</li>
+				<li>Веб-интерфейс всех разделов проекта Карты@Mail.ru (frontend+backend).</li>
+				<li>Карты метро, включая построение маршрутов (frontend+backend).</li>
+				<li>Подготовка к растеризации пробочных данных (backend).</li>
+				<li>Django-приложения для закрытых разделов проекта: документация, инструменты разработчиков и админка (backend).</li>
+				<li>Участие в обсуждении, проектировании и разработке большинства сервисов проекта Карты@Mail.Ru.</li>
+			</ul>
+
+			<h3><a href="http://mail.ru/">Mail.Ru</a>: 2006 — 2011</h3>
+
+			<p>JavaScript-разработчик контентных проектов Mail.Ru.</p>
+
+			<ul>
+				<li>UI-элементы портальных проектов: слайдеры, трекбары, выпадушки и многое другое.</li>
+				<li>WYSIWIG-редакторы для почты и контентных проектов.</li>
+				<li>AJAX-почта pro.mail.ru.</li>
+				<li>Рутинные задачи: валидаторы форм, аяксификаторы.</li>
+			</ul>
+
+			<h3><a href="http://mail.ru/">Mail.Ru</a>: 2005 — 2006</h3>
+
+			<p>HTML-верстальщик контентных проектов и почты.</p>
+
+			<h2>My projects</h2>
+
+			<p>jQuery-плагины:</p>
+
+			<ul>
+				<li><a href="https://github.com/albburtsev/jquery.lookingfor">jquery.lookingfor</a> – клиентский поиск;</li>
+				<li><a href="https://github.com/albburtsev/jquery.typist">jquery.typist</a> – имитация печати текста.</li>
+			</ul>
+
+			<p>Разработал собственную CMS на PHP – <a href="http://cms-correct.ru/">Correct</a>. Проект создавался для быстрого развертывания простых сайтов типа «каталог» с удобной админкой.</p>
+
+			<p>Также я работаю в составе группы frontend-разработчиков проекта <a href="http://rememba.ru/">rememba.ru</a>.</p>
+		</div>
+	</section>
+
+	<section class="slide">
+		<div class="title title_contacts">
+			<h1 class="title__head">Contacts</h1>
+			<div class="title__delimeter">
+				<div class="title__gurt">
+					<span class="title__icon flaticon-address14"></span>
+				</div>
+			</div>
+		</div>
+		<div class="slide__text">
+			<p>Most reliable way to contact with me is <a href="mailto:albburtsev@gmail.com">to write email</a> or add me in <a href="skype:albburtsev">skype</a>.</p>
+
+			<ul class="contacts">
+				<li class="contact">
+					<a href="tel:+79160064854">
+						<span class="contact__icon flaticon-phone72"></span>+7 (916) 006-48-54
+					</a>
+				</li>
+				<li class="contact">
+					<a href="mailto:albburtsev@gmail.com">
+						<span class="contact__icon flaticon-email6"></span>albburtsev@gmail.com
+					</a>
+				</li>
+				<li class="contact">
+					<a href="skype:albburtsev">
+						<span class="contact__icon flaticon-social6"></span>albburtsev
+					</a>
+				</li>
+
+				<li class="contact_delim"></li>
+
+				<li class="contact">
+					<a href="https://github.com/albburtsev">
+						<span class="contact__icon flaticon-github13"></span>Github
+					</a>
+				</li>
+				<li class="contact">
+					<a href="http://habrahabr.ru/users/bur/">
+						<span class="contact__icon flaticon-hotel75"></span>Habrahabr
+					</a>
+				</li>
+
+				<li class="contact_delim"></li>
+
+				<li class="contact">
+					<a href="https://www.facebook.com/albburtsev">
+						<span class="contact__icon flaticon-facebook29"></span>Facebook
+					</a>
+				</li>
+				<li class="contact">
+					<a href="https://twitter.com/albburtsev">
+						<span class="contact__icon flaticon-social19"></span>Twitter
+					</a>
+				</li>
+				<li class="contact">
+					<a href="https://foursquare.com/user/46356854">
+						<span class="contact__icon flaticon-check59"></span>Foursquare
+					</a>
+				</li>
+				<li class="contact">
+					<a href="http://instagram.com/albburtsev/">
+						<span class="contact__icon flaticon-photos12"></span>Instagram
+					</a>
+				</li>
+				<li class="contact">
+					<a href="https://plus.google.com/u/0/112730589178585282928/posts">
+						<span class="contact__icon flaticon-social5"></span>Google+
+					</a>
+				</li>
+				<li class="contact">
+					<a href="http://www.youtube.com/user/albburtsev">
+						<span class="contact__icon flaticon-youtube17"></span>Youtube+
+					</a>
+				</li>
+			</ul>
+		</div>
+	</section>
 
 	<footer class="footer">
 		<h2 class="footer__head">Powered by</h2>
